		Activities: fixed translation of blank string in Parent Dashboard Activity view
		Activities: removed stand along activity copy functionality
		Activities: interface string fix in activity edit screen
		Activities: fixed Back button level skip issue when managing enrolment
		Activities: fixed dropped search string on bulk action in activity manage
		Attendance: added new filters to student absence reports to allow sorting by roll group or student
		Attendance: added ability to set partial per-class future absence
		Attendance: added visual graphing for school-wide Attendance Trends
		Attendance: improved the display of Classes/Roll Groups Not Registered to include visual overview
		Attendance: updated Daily Incomplete Email CLI script to include attendance by class
		Attendance: colspan fix in attendance report for roll groups
		Attendance: tweaked interface language to improve handling of plurals
		Attendance: fixed non-functional client-side date testing in reports for Students Not Onsite and Students Not Present
		Crowd Assessment: removed legacy interface string from Discuss page
		Data Updater: fixed PHP notice issue in Manage Medical Form Data edit view
		Data Updater: added selection persistence to student listing in Student Data Updater History report
		Departments: added course long name to header of Class page
		Departments: fixed errant translation preventing Class page details from showing in some languages (e.g. Spanish, French)
		Departments: included participants in Class page, rather than as a subpage.
		Finance: removed thousand separator from invoice bulk export
		Finance: switched from JS to HTML for fee block placeholders
		Finance: added option to output name on invoice/receipt as student official name, rather than preferredName+surname
		Finance: fixed bug in Paid - Partial filter in invoice manage view
		Finance: added filter by fee category in invoice manage view
		Finance: made year choice persist when using search in Manage Fees